# rokey_bootbot

./: README.md  system_requirement.md
Integrated_launch_bootbot/bootbot/: README.md  package.xml  setup.py
Integrated_launch_bootbot/bootbot/bootbot/: config.json  server_connector_node.py  svg_parser.py  svg_to_robot.py
Integrated_launch_bootbot/bootbot/bootbot/gui_web/: app.py  gui_web_UIcoordinate_failed.py
Integrated_launch_bootbot/bootbot/bootbot/gui_web/static/css/: style_designing.css
Integrated_launch_bootbot/bootbot/bootbot/gui_web/static/js/: main_designing.js
Integrated_launch_bootbot/bootbot/bootbot/gui_web/static/urdf/: m0609_rg2.urdf
Integrated_launch_bootbot/bootbot/launch/: bootbot_robot.launch.py  bootbot_server.launch.py
Integrated_launch_bootbot/calligraphy_interfaces/: CMakeLists.txt  package.xml
Integrated_launch_bootbot/calligraphy_interfaces/msg/: InputJson.msg  StrokeCmd.msg
doosan_rokey_coop1_bootbot_robot_nodes/: client_README.md  setup.cfg  setup.py
doosan_rokey_coop1_bootbot_robot_nodes/bootbot/: calligraphy_config.json  client_connector_node.py  config.json  robot_write_drl_node.py  trigger_node.py
rokey_bootbot/: README.md  package.xml  setup.cfg  setup.py
rokey_bootbot/rokey_bootbot/: mongo_repository.py  server_connector_node.py  server_connector_node_designing.py
rokey_bootbot/rokey_bootbot/gui_web/: app.py
rokey_bootbot/rokey_bootbot/gui_web/templates/: landing.html  manager_designing.html  user_designing.html
rokey_bootbot/rokey_bootbot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+6 files in other folders)
