<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>bootbot</name>
  <version>0.0.0</version>

  <description>
    Calligraphy robot controller, server connector and web GUI
  </description>

  <maintainer email="woods@example.com">woods</maintainer>
  <maintainer email="son@todo.todo">son</maintainer>

  <license>Apache-2.0</license>

  <!-- ROS 2 기본 -->
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>

  <!-- ROS 메시지 및 액션 -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>

  <!-- 프로젝트 사용자 정의 인터페이스 -->
  <depend>calligraphy_interfaces</depend>

  <!-- Doosan Robotics -->
  <depend>dsr_common2</depend>
  <depend>dsr_msgs2</depend>

  <!-- 테스트 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
